title can be specified in the url sunrise/sunset aren't displayed until the map is displayed background colour isn't set until the background image is set

--- a/style.css
+++ b/style.css
@@ -7,4 +7,5 @@
 img{ border:0; }
 
 .block{ float:center; margin-right:2%; margin-top:10px; }
-
+.sunsign { position:absolute; }
+.hidden-sunsign { visibility: hidden; } 
