--- a/instructions/stylesheets/stylesheet.css
+++ b/instructions/stylesheets/stylesheet.css
@@ -318,6 +318,22 @@ p a {
   font-weight: 400;
 }
 
+b {
+	font-weight: bold
+}
+
+.locationtype,  .setting {
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  font-size: 90%;
+  color: #008080
+  /*font-style: italic;*/
+}
+
+.note {
+  font-size: 80%;
+  font-style: italic;
+}
+
 blockquote {
   font-size: 1.6em;
   border-left: 10px solid #e9e9e9;
