Wow!! Shaves off 1 second or more by putting the javascript ahead of the css/font links. Due to allow more parallelism as modern browsers having implemented speculative parsing - https://stackoverflow.com/questions/9271276/is-the-recommendation-to-include-css-before-javascript-invalid Also made more css changes to try and get the the credittext below the sunrise signs on android browser, still doesn't seem to work.

--- a/style.css
+++ b/style.css
@@ -10,19 +10,15 @@
 img{ border:0; }
 
 .block{ float:center; margin-right:2%; margin-top:10px; }
-.sunsign { position:absolute; z-index: 5; }
+.sunsign { position:absolute; }
 .hidden-sunsign { visibility: hidden; } 
-.hidden-hoverFrame { visibility: hidden; } 
-
-/* h1 { font-family: 'Press Start 2P', sans-serif; } */
-.locationHoverPlacename { font-family: 'Merienda', sans-serif; font-weight: bold; color: #5e4820; }
-.locationHoverOwner { font-family: 'Calligraffitti', sans-serif; font-weight: bold; color: #550000 }
-.locationHoverCoordinates { font-family: 'Merienda', sans-serif; font-size: 70%; color: #5e4820; }
+#sunsetsign, #sunrisesign, #signsunderneith  { z-index: 5; }
 
 .credittext { 
 	font-family: 'Merienda', sans-serif; 
 	font-size: 11px;
 	color: #BBBBBB;
+	z-index: 1;
 }
 .credittext a {
   text-decoration: none;
@@ -30,6 +26,11 @@ img{ border:0; }
 }
 .credittext a:hover, .credittext a:focus {text-decoration: underline; color: white;}
 
+/* h1 { font-family: 'Press Start 2P', sans-serif; } */
+.hidden-hoverFrame { visibility: hidden; } 
+.locationHoverPlacename { font-family: 'Merienda', sans-serif; font-weight: bold; color: #5e4820; }
+.locationHoverOwner { font-family: 'Calligraffitti', sans-serif; font-weight: bold; color: #550000 }
+.locationHoverCoordinates { font-family: 'Merienda', sans-serif; font-size: 70%; color: #5e4820; }
 
 #locationDesc {
   width: 250px;
