Mouse cursor now only show drag cursor when screen is dradgable. (i.e. not when most zoomed out)

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .current-level{ z-index:20; visibility: visible }
 .resources {visibility: hidden}
 
-#map-1{ position:absolute; left:0; top:0; cursor:move }
+#map-1{ position:absolute; left:0; top:0; }
 img{ border:0; }
 
 .block{ float:center; margin-right:2%; margin-top:10px; }
