Hack to make the first impression less cluttered - moves the contents away from being the first things the user sees

--- a/instructions/stylesheets/stylesheet.css
+++ b/instructions/stylesheets/stylesheet.css
@@ -111,6 +111,7 @@ header h2 {
 
 aside#sidebar {
   width: 200px;
+  margin-top: 60em;
   padding-left: 20px;
   min-height: 504px;
   float: right;
