--- a/instructions/stylesheets/stylesheet.css
+++ b/instructions/stylesheets/stylesheet.css
@@ -109,15 +109,18 @@ header h2 {
   max-width: 100%;
 }
 
-aside#sidebar {
+aside#sidebar, aside#sidebarlow {
   width: 200px;
-  margin-top: 60em;
   padding-left: 20px;
   min-height: 504px;
   float: right;
   background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
   font-size: 12px;
   line-height: 1.3;
+}
+
+aside#sidebarlow {
+  margin-top: 60em;
 }
 
 aside#sidebar p.repo-owner,
@@ -152,7 +155,7 @@ aside#sidebar p.repo-owner a {
   min-height: 0;
 }
 
-a.button, a.downloadbutton {
+a.button, a.downloadbutton, a.downloadappbutton {
   width: 134px;
   height: 58px;
   line-height: 1.2;
@@ -162,7 +165,7 @@ a.button, a.downloadbutton {
   padding-top: 22px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
 }
-a.button small, a.downloadbutton small  {
+a.button small, a.downloadbutton small, a.downloadappbutton small {
   display: block;
   font-size: 11px;
 }
@@ -172,13 +175,17 @@ header a.button, header a.downloadbutton {
   top: 0;
   background: transparent url(../images/github-button.png) 0 0 no-repeat;
 }
-aside a.button, a.downloadbutton {
+aside a.button, a.downloadbutton, a.downloadappbutton  {
   width: 138px;
   padding-left: 64px;
   display: block;
   background: transparent url(../images/download-button.png) 0 0 no-repeat;
   margin-bottom: 20px;
   font-size: 21px;
+}
+
+a.downloadappbutton  {
+  background: transparent url(../images/download-button-app.png) 0 0 no-repeat;
 }
 
 .monospace {
