--- a/src/templates/index.fmpp.html
+++ b/src/templates/index.fmpp.html
@@ -1,3 +1,11 @@
+<#-- pp.dropOutputFile instructs FMPP to drop the current output file, so we
+     will not have index.fmpp.html in the output directory. Which causes a bug
+   if the version.output_filename in the data says to use that name - I've
+   added fmpp to this file's name to avoid that chance -->
+<@pp.dropOutputFile />
+<#list versions as version>
+<@pp.changeOutputFile name=version.output_filename />
+<#assign enable_dynamic = version.enable_dynamic><#-- need to copy any data we will need inside macros into a namespace-scope variable and used that - http://stackoverflow.com/questions/18635743/freemarker-loop-variables-not-surviving-nested-macro-call -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -20,8 +28,9 @@
     <link rel="icon" sizes="196x196" href="images/apple-touch-icon.png"><!-- Chrome v31+ for Android -->
     <link rel="icon" sizes="16x16" type="image/png" href="images/favicon.png" />
 
+  <#if version.enable_dynamic>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-  <script type="text/javascript" src="js/animatedcollapse.js">
+  <script type="text/javascript" src="js/animatedcollapse.min.js">
     /***********************************************
     * Animated Collapsible DIV v2.4- (c) Dynamic Drive DHTML code library (www.dynamicdrive.com)
     * This notice MUST stay intact for legal use
@@ -78,7 +87,39 @@
     }
     animatedcollapse.init()
   </script>
+  </#if>
 
+    <#macro OpenCollapsableSection headingLevel id title collapsed="true">
+      <#if enable_dynamic>
+        <#if collapsed == "true">
+          <#assign headerclass="header-collapsed">
+          <#assign displayStyle="none">
+        <#else>
+          <#assign headerclass="header-expanded">
+          <#assign displayStyle="block">
+        </#if>
+        <#assign expanderFontSize=12 + (16 / headingLevel?number)>
+
+        <#-- Create a dynamic collapsable div Heading -->
+        <a id="${id}_heading" href="index_expanded.html#${id}_heading" class="headerhref" rel="toggle[${id}]">
+            <div class="${headerclass}">
+              <div class="expander-content"><h${headingLevel}>${title}</h${headingLevel}></div>
+              <div class="expander" style="font-size: ${expanderFontSize}px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
+            </div>
+        </a>
+        <div id="${id}" style="display:${displayStyle}">
+      <#else>
+        <#-- Create a normal static heading -->
+        <a id="${id}_heading"></a>
+        <h${headingLevel}>${title}</h${headingLevel}>
+      </#if>
+    </#macro>
+
+    <#macro CloseCollapsableSection >
+      <#if enable_dynamic>
+        </div>
+      </#if>
+    </#macro>
 
 
     <!--[if lt IE 9]>
@@ -134,14 +175,7 @@
     </ol>
 
 
-    <!--        <a id="FromDropbox_heading" href="index_expanded.html#FromDropbox_heading" class="headerhref" rel="toggle[FromDropbox]">
-            <div class="header-expanded">
-              <div class="expander-content"><h2>Or run it from your Dropbox, or a wiki page.</h2></div>
-              <div class="expander" style="font-size: 20px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
-            </div>
-        </a>
-        <div id="FromDropbox" style="display:block">
--->
+    <!--<@OpenCollapsableSection headingLevel="2" id="FromDropbox" title="Or run it from your Dropbox, or a wiki page." collapsed="false"></@OpenCollapsableSection>-->
 
       <h2><a id="FromDropbox"></a>Run it from your Dropbox, or a wiki page.</h2>
 
@@ -158,18 +192,10 @@
       The locations list can be in either html format or txt format (but not Google-Doc format). By default, Google Drive will view .txt files but not edit them, you can
       change this by adding a notepad app - in Google Drive go to <span class="menuoptions">Options &rarr; Manage apps</span>.</p>
 
-    <!--        </div>
--->
+    <!--<@CloseCollapsableSection></@CloseCollapsableSection>-->
 
 
-    <!--        <a id="Trust_heading" href="index_expanded.html#Trust_heading" class="headerhref" rel="toggle[Trust]">
-            <div class="header-collapsed">
-              <div class="expander-content"><h2>Can I trust this to not disappear after I've started using it?</h2></div>
-              <div class="expander" style="font-size: 20px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
-            </div>
-        </a>
-        <div id="Trust" style="display:none">
--->
+    <!--<@OpenCollapsableSection headingLevel="2" id="Trust" title="Can I trust this to not disappear after I've started using it?"></@OpenCollapsableSection>-->
 
       <h2><a id="Trust"></a>Can I trust this to not disappear after I've started using it?</h2>
 
@@ -193,8 +219,7 @@
 
       <p>I haven't mentioned other cloud file/hosting services as I've not tried them, they probably work fine though.</p>
 
-    <!--        </div>
--->
+    <!--<@CloseCollapsableSection></@CloseCollapsableSection>-->
 
 
 
@@ -249,13 +274,8 @@ PlayerHouse,   -800, -1800, "Dr.Frankenstone's mountain lair", "Dr.Frankenstone"
 
     but only the first 3 items are required (type, x, z).
 
-        <a id="locationTypes_heading" href="index_expanded.html#locationTypes_heading" class="headerhref" rel="toggle[locationTypes]">
-            <div class="header-collapsed">
-              <div class="expander-content"><h3>type</h3></div>
-              <div class="expander" style="font-size: 17.333333333333px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
-            </div>
-        </a>
-        <div id="locationTypes" style="display:none">
+    <@OpenCollapsableSection headingLevel="3" id="locationTypes" title="type"></@OpenCollapsableSection>
+    <#--<h3><a id="locationTypes"></a>type</h3>-->
       <p>The first column specifies the type of location, and must be one of the following: </p>
 
       <ul>
@@ -295,27 +315,17 @@ PlayerHouse,   -800, -1800, "Dr.Frankenstone's mountain lair", "Dr.Frankenstone"
       <p>Given that any location-type can be set to display any icon or href, their purpose is only to make the list easier to read, and to
       save having to repeatedly type out the details.</p>
 
-        </div>
-        <a id="locationCoords_heading" href="index_expanded.html#locationCoords_heading" class="headerhref" rel="toggle[locationCoords]">
-            <div class="header-collapsed">
-              <div class="expander-content"><h3><span class="columnname">x</span> and <span class="columnname">z</span></h3></div>
-              <div class="expander" style="font-size: 17.333333333333px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
-            </div>
-        </a>
-        <div id="locationCoords" style="display:none">
+    <@CloseCollapsableSection></@CloseCollapsableSection>
+    <@OpenCollapsableSection headingLevel="3" id="locationCoords" title="<span class=\"columnname\">x</span> and <span class=\"columnname\">z</span>"></@OpenCollapsableSection>
+    <#--<h3><a id="locationCoords"></a><span class="columnname">x</span> and <span class="columnname">z</span></h3>-->
 
       <p>The x and z columns should contain the area's coordinates from Minecraft (press F3 in the game to see your coordinates).</p>
 
       <p>Don't worry about decimal places, just round the coordinates to whole numbers.</p>
 
-        </div>
-        <a id="locationCaption_heading" href="index_expanded.html#locationCaption_heading" class="headerhref" rel="toggle[locationCaption]">
-            <div class="header-collapsed">
-              <div class="expander-content"><h3><span class="columnname">description</span> and <span class="columnname">owner</span></h3></div>
-              <div class="expander" style="font-size: 17.333333333333px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
-            </div>
-        </a>
-        <div id="locationCaption" style="display:none">
+    <@CloseCollapsableSection></@CloseCollapsableSection>
+    <@OpenCollapsableSection headingLevel="3" id="locationCaption" title="<span class=\"columnname\">description</span> and <span class=\"columnname\">owner</span>"></@OpenCollapsableSection>
+    <#--<h3><a id="locationCaption"></a><span class="columnname">description</span> and <span class="columnname">owner</span></h3>-->
 
       <p>Description and owner are optional and determine how the map location will be labelled. They don't need to be inside double-quotation marks (") but putting them in quotemarks allows the following:</p>
       <ul>
@@ -345,14 +355,9 @@ PlayerHouse,   -800, -1800, "Dr.Frankenstone's mountain lair", "Dr.Frankenstone"
       <p>The visibility of labels can also be controlled using the <a href="#Settings_labels"><span class="setting">hidelabelsabove</span> and
       <span class="setting">showlabelsbelow</span> settings</a>.</p>
 
-        </div>
-        <a id="locationHref_heading" href="index_expanded.html#locationHref_heading" class="headerhref" rel="toggle[locationHref]">
-            <div class="header-collapsed">
-              <div class="expander-content"><h3><span class="columnname">href</span></h3></div>
-              <div class="expander" style="font-size: 17.333333333333px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
-            </div>
-        </a>
-        <div id="locationHref" style="display:none">
+    <@CloseCollapsableSection></@CloseCollapsableSection>
+    <@OpenCollapsableSection headingLevel="3" id="locationHref" title="<span class=\"columnname\">href</span>"></@OpenCollapsableSection>
+    <#--<h3><a id="locationHref"></a><span class="columnname">href</span></h3>-->
 
       <p>By placing a URL in this column you can make the map location clickable (and the chain-link icon appears when hovering the
       mouse over the location). Some suggested uses:</p>
@@ -367,14 +372,9 @@ PlayerHouse,   -800, -1800, "Dr.Frankenstone's mountain lair", "Dr.Frankenstone"
       then place a hyphen in the href column to disable the link.</p>
 
 
-        </div>
-        <a id="locationIconIndex_heading" href="index_expanded.html#locationIconIndex_heading" class="headerhref" rel="toggle[locationIconIndex]">
-            <div class="header-collapsed">
-              <div class="expander-content"><h3><span class="columnname">icon-index</span></h3></div>
-              <div class="expander" style="font-size: 17.333333333333px"><div class="expander-arrow"></div><div class="expander-bar1"></div><div class="expander-bar2"></div></div>
-            </div>
-        </a>
-        <div id="locationIconIndex" style="display:none">
+    <@CloseCollapsableSection></@CloseCollapsableSection>
+    <@OpenCollapsableSection headingLevel="3" id="locationIconIndex" title="<span class=\"columnname\">icon-index</span>"></@OpenCollapsableSection>
+    <#--<h3><a id="locationIconIndex"></a><span class="columnname">icon-index</span></h3>-->
 
       <p>There are more icons available than can be specified with the location-type. The icon-index field lets you
       manually choose the icon to be displayed at the location. The stock icons and their icon-index can be viewed in this
@@ -385,7 +385,7 @@ PlayerHouse,   -800, -1800, "Dr.Frankenstone's mountain lair", "Dr.Frankenstone"
       the idea was to give the impression of Minecraft structures on a fantasy map.</p>
 
       <br/>
-        </div>
+    <@CloseCollapsableSection></@CloseCollapsableSection>
 
 
     <h1><a id="Settings"></a>Settings</h1>
@@ -638,3 +638,4 @@ range = 6400</pre>
 
   </body>
 </html>
+</#list>
