--- a/src/templates/googledrive.fmpp.html
+++ b/src/templates/googledrive.fmpp.html
@@ -1,3 +1,15 @@
+<#-- pp.dropOutputFile instructs FMPP to drop the current output file, so we
+     will not have googledrive.fmpp.html in the output directory. -->
+<@pp.dropOutputFile />
+<@pp.changeOutputFile name=pp.sourceFileName?replace(".fmpp.", ".") />
+<#if mapVersion=="1.6">
+  <#assign GoogleDriveUrl_mapGenerator = GoogleDriveUrl_mapGenerator_v1_6>
+  <#assign GoogleDriveId_example_txt = GoogleDriveId_example_txt_v1_6><#-- prepend https://googledrive.com/host/ to read this file-->
+</#if>
+<#if mapVersion=="1.7">
+  <#assign GoogleDriveUrl_mapGenerator = GoogleDriveUrl_mapGenerator_v1_7>
+  <#assign GoogleDriveId_example_txt = GoogleDriveId_example_txt_v1_7><#-- prepend https://googledrive.com/host/ to read this file-->
+</#if>
 <!DOCTYPE html>
 <html>
   <head>
@@ -83,17 +95,17 @@
         </p>
 
         You will end up with some text that looks like this, the letters I've colored green are the file's code:<br/>
-        <pre style="color: grey;">https://drive.google.com/file/d/<span style="color:green;">0B35KCzsTLKY1YkVMeWRBemtKdHM</span>/edit?usp=sharing</pre>
+        <pre style="color: grey;">https://drive.google.com/file/d/<span style="color:green;">${GoogleDriveId_example_txt}</span>/edit?usp=sharing</pre>
 
         <p>i.e. everything between <span class="monospace" style="color:black;">https://docs.google.com/file/d/</span> and <span class="monospace" style="color:black;">/edit?usp=sharing</span> is
         your file's unique code.</p>
 
         <p>Add your file's unique code to the end of this URL...
-        <pre>https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=</pre>
+        <pre>${GoogleDriveUrl_mapGenerator}/index.html?googlesrc=</pre>
 
         <p>... and you have the URL for your new map. For example:<br/>
 
-        <a style="font-size: 75%" href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YkVMeWRBemtKdHM">https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=<span style="color:green;">0B35KCzsTLKY1YkVMeWRBemtKdHM</span></a>
+        <a style="font-size: 75%" href="${GoogleDriveUrl_mapGenerator}/index.html?googlesrc=${GoogleDriveId_example_txt}">${GoogleDriveUrl_mapGenerator}/index.html?googlesrc=<span style="color:green;">${GoogleDriveId_example_txt}</span></a>
         </p>
 
         <h2>Troubleshooting</h2>
